.provarCaches/00D5f000005vwGkEAI/objects/rstk__datadictionary__c.object
<CustomObject>
    <description>datadictionary__c:  This is data dictionary</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__field_help__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__field_label__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__field_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__field_techhelp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field Tech Help</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__table__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Table Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Data Dictionary</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__field_label__c</columns>
        <columns>rstk__field_help__c</columns>
        <columns>rstk__field_techhelp__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>